--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,16 @@
 name: sat solver
 on:
   push:
-    branches:
-    - main
+    branches: [ main ]
   pull_request:
-    branches:
-    - main
+    branches: [ main ]
 jobs:
-  BuildAndTest:
+  build-and-test:
     runs-on: ubuntu-latest
     steps:
-    - name: Clone codes
+    - name: clone codes
       uses: actions/checkout@v2
-    - name: Build
+    - name: build
       run: make docker-build
-    - name: Test
+    - name: test
       run: make docker-run-test
